# shinobi-online

./: .clang-format  .dockerignore  .gitattributes  .luarc.json  CMakeLists.txt  Dockerfile  LICENSE  README.md  conandata.yml  conanfile.py  config.lua  forgottenserver.s3db  shinobi-online.s3db  vcpkg.json  versions.xml
.github/workflows/: cmake-multi-platform.yml
data/: CMakeLists.txt  Damage.txt  lib.rar
data/XML/: 3232.xml  stages.xml  vocations.xml
data/actions/: actions.xml
data/actions/lib/: actions.lua
data/actions/scripts/Aburame Jutsu/: Kikaichuu Arare No Jutsu.lua  Kikaichuu Return.lua
data/actions/scripts/Akimichi Jutsu/: Bubun Baika.lua  Chou Baika.lua  Choudan Bakugeki.lua  Hari Sensha.lua  Harite Chou.lua  Horengan.lua  Karegan.lua  Mizudan Suisha.lua  Nikudan Sensha.lua  Omoni.lua  Tongarashigan.lua
data/actions/scripts/CMD/: Run.lua  mold.lua  rest.lua  throw.lua  walk.lua
data/actions/scripts/Nara Jutsu/: Kage Kubi Shibari.lua  Kagemane Shuriken.lua  Kagemane.lua  duplicate.lua  free.lua  kage nui.lua  triplicate.lua
data/actions/scripts/Ninpou/: .returnBunshin.lua.kate-swp  Bunshin.lua  Henge.lua  Kai.lua  Kakuremino.lua  Konoha Shunshin No Jutsu.lua  Mizu Kinobori.lua  kawarimi.lua  returnBunshin.lua
data/actions/scripts/Uchiha Jutsu/: Katon Endan.lua  Katon Goukakyuu.lua  Katon Gouryuuka.lua  Katon Housenka no Jutsu.lua  Katon Karyuu Endan.lua  Katon Karyuudan.lua  Katon Ryuuka.lua  Katon Shiruko no Jutsu.lua  Mangekyou Sharingan.lua  Sharingan Level 1.lua  Sharingan Level 2.lua  Sharingan Level 3.lua
data/actions/scripts/game/: target_kill.lua  target_kill2.lua  target_kill3.lua
data/actions/scripts/other/: blueberrybush.lua  changegold.lua  constructionkits.lua  createbread.lua  decayto.lua  destroy.lua  dice.lua  doors.lua  enchanting.lua  fireworksrocket.lua  food.lua  furniturebeds.lua  music.lua  partyhat.lua  piggybank.lua  spellbook.lua  stuffeddragon.lua  surprisebag.lua  teleport.lua  watch.lua  windows.lua
data/actions/scripts/tools/: blessed_wooden_stake.lua  boxroom.lua
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: CapKikais.lua  Direction.lua  Exame Chunin Fase 2.lua  Exame Chunin.lua  GraduationSystem.lua  Vocation_Outfit.lua  bounty.lua  creatureMove.lua  death.lua  extendedopcode.lua  firstitem.lua  guildmotd.lua  hachimonAdvance.lua  hit.lua  idle.lua  kagemaneDeath.lua  login.lua  mute.lua  nomove.lua  partyAndGuildProtection.lua  peixe.lua  peixeDead.lua  pesca.lua  petCombat.lua  petdeath.lua  petkill.lua  petstats.lua  pointsup.lua  reportbug.lua  rest.lua  skillAdvanced.lua  skullcheck.lua  stamina.lua  task.lua
data/globalevents/: globalevents.xml
data/globalevents/scripts/: Exame Chunin Startup.lua  dia.lua  init.lua  noite.lua  propaganda.lua  record.lua  save.lua  savehouse.lua  saveplayer.lua  start.lua  tarde.lua
data/items/: 3.otb  items.xml
data/lib/: 000-constant.lua  001-class.lua  002-wait.lua  050-function.lua  Akimichi_LIB.lua  Function Lib.lua  Hachimon_LIB.lua  Inuzuka_LIB.lua  Kagemane_lib.lua  Missao_LIB.lua  ShinobiWorldGlobal_LIB.lua  checkJutsu_LIB.lua  lib_Tasks.lua  newFunction_lib.lua  pet.lua  rickLib.lua  stamina_LIB.lua
data/monster/: monsters.xml
data/monster/Shinobi/: bat.xml  bear.xml  snake.xml  wolf.xml
data/movements/: movements.xml
data/spells/scripts/Inuzuka/: Garouga.lua  Tsuuga.lua
data/spells/scripts/Maito/: Konoha Senpuu.lua
data/spells/scripts/Uchiha/: Goukakyuu no Jutsu.lua  Karyuu Endan.lua  Ryuuka no Jutsu.lua  Shiruko no Jutsu.lua
data/spells/scripts/attack/: avalanche.lua  berserk.lua
data/spells/scripts/monster/: teste.lua
data/talkactions/scripts/: !nick.lua  Exame Chunin Fase 2.lua  Exame Chunin.lua  air.lua  animatedtext.lua  animationeffect.lua  attr.lua  broadcast.lua  broadcastclass.lua  clean.lua  closeopen.lua  commands.lua  configinfo.lua  crash.lua  createitem.lua  creature.lua  day.lua  deathlist.lua  dodge.lua  emoticon.lua  fixedBugPoints.lua  frags.lua  gamemaster.lua  gethouse.lua  kick.lua  leavehouse.lua  magiceffect.lua  masskick.lua  mode.lua  money.lua  multicheck.lua  mute.lua  newtype.lua  notations.lua  online.lua  owner.lua  pet.lua  playerinfo.lua  position.lua  promote.lua  (+27 more)
data/world/: MainWorld-house.xml  MainWorld-spawn.xml  Shinobi Online Map-house.xml  Shinobi Online Map-spawn.xml  Shinobi Online Map.otbm
schemas/: pgsql.sql
src/: CMakeLists.txt  README.md  account.h  actions.cpp  actions.h  admin.cpp  allocator.h  baseevents.cpp  baseevents.h  beds.cpp  beds.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  databasemysql.cpp  databasemysql.h  databaseodbc.cpp  databaseodbc.h  databasepgsql.cpp  databasepgsql.h  databasesqlite.cpp  (+126 more)
src/database/: databaseodbc.cpp
